# unifi-mcp-server

./: .env.example  .gitignore  .npmignore  ADVANCED_FEATURES.md  CLAUDE_DESKTOP_SETUP.md  LICENSE  MANIFEST.in  NUEVAS_FUNCIONALIDADES.md  README.md  README_FINAL.md  VALIDATION_REPORT.md  config.py  mcp_config.json  package-lock.json  package.json  pyproject.toml  sample_responses.json  setup-trae-ide.sh  setup.py  test-new-features.js  trae-mcp-config.json  tsconfig.json  unifi_mcp_server.py  validate-tools.js  verify-tools.js
.github/workflows/: publish.yml
src/: config.ts  index.ts  unifi-client.ts
