[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "unifi-mcp-server"
version = "1.0.0"
description = "Servidor MCP para gestión de redes UniFi con 57 herramientas"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Gilberth", email = "your-email@example.com"}
]
keywords = ["unifi", "mcp", "server", "network", "management", "ubiquiti", "claude", "ai"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers",
    "Topic :: System :: Networking",
    "Topic :: System :: Systems Administration",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastmcp>=0.2.0"
]

[project.urls]
Homepage = "https://github.com/gilberth/unifi-mcp-server"
Repository = "https://github.com/gilberth/unifi-mcp-server"
Issues = "https://github.com/gilberth/unifi-mcp-server/issues"
Documentation = "https://github.com/gilberth/unifi-mcp-server#readme"

[project.scripts]
unifi-mcp-server = "unifi_mcp_server:main"

[tool.setuptools]
py-modules = ["unifi_mcp_server", "config"]

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt", "*.json"]